--- a/_quarto.yml
+++ b/_quarto.yml
@@ -11,7 +11,7 @@ website:
         href: resume.qmd
       - text: Projects
         menu:
-          - text: EV Adoption
+          - text: EV Adoption in WA
             href: projects/ev-adoption.qmd
           - text: Movie Recommender
             href: projects/movie-recommender.qmd
@@ -25,7 +25,7 @@ website:
         href: contact.qmd
     right:
       - icon: github
-        href: https://github.com/krisauw
+        href: https://krisauw.github.io/website/
       - icon: linkedin
         href: https://www.linkedin.com/in/hien-bui-emi-6273b010a/
   search: true
