Update content, fix links & navbar

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -37,7 +37,7 @@ website:
         href: contact.qmd
     right:
       - icon: github
-        href: https://github.com/krisauw
+        href: https://krisauw.github.io/website/
       - icon: linkedin
         href: https://www.linkedin.com/in/hien-bui-emi-6273b010a/
 
